updated install file

--- a/install
+++ b/install
@@ -1,12 +1,21 @@
 #!/bin/bash -ex
 
+# node.js
 brew install node;
+
+# js package manager
 brew install npm;
 
-npm install pg;
+# testing
 npm install zombie;
+
+# web server
 npm install express;
 
+# database
+npm install pg;
 npm install knex --save;
 npm install bookshelf --save;
 
+# linter
+npm install -g eslint
